<resources>

    <string name="youtube_api_key">AIzaSyAXtpHC5R3gqm8-4yUBroud9eDGZeC3Ghs</string>
    <string name="player_error">Error initializing YouTube player: %s</string>

    <string name="app_name">Smart City</string>
    <string name="home_toolbar_text">Smart City</string>
    <string name="category">Category</string>
    <string name="no_internet_title">Please check your Internet Connection.</string>
    <string name="try_again">Try Again</string>
    <string name="error_internet_connection">Please check your internet connection</string>
    <string name="error_something_went_wrong">Oops! Something went wrong.</string>

    <string name="email">action@arlingtontx.gov</string>
    <string name="phone_number">817-459-6777</string>
    <string name="call_builder">Call</string>
    <string name="email_builder">Send an Email</string>
    <string name="contact_details">Contact Details</string>
    <string name="phone_number_copied">Phone Number Copied</string>
    <string name="email_copied">Email copied</string>
    <string name="email_subject">Query from App</string>
</resources>
