<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay">

                <TextView
                    android:id="@+id/toolBarHeader"
                    style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/home_toolbar_text"
                    android:textColor="@android:color/white" />

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp4"
            android:focusable="true"
            android:foreground="?selectableItemBackground"
            app:cardCornerRadius="@dimen/dp4"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/dp10">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <TextView
                        style="@style/Base.TextAppearance.AppCompat.Body1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp5"
                        android:drawableStart="@drawable/ic_email_black_24dp"
                        android:drawablePadding="@dimen/dp5"
                        android:gravity="center_vertical"
                        android:text="@string/email"
                        android:textColor="@android:color/black" />

                    <ImageView
                        android:id="@+id/ivEmailCopy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:src="@drawable/ic_content_copy_black_24dp" />


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp20"
                    android:gravity="center_vertical">

                    <TextView
                        style="@style/Base.TextAppearance.AppCompat.Body1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp5"
                        android:drawableStart="@drawable/ic_call_black_24dp"
                        android:drawablePadding="@dimen/dp5"
                        android:gravity="center_vertical"
                        android:text="@string/phone_number"
                        android:textColor="@android:color/black" />

                    <ImageView
                        android:id="@+id/ivPhoneNumberCopy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:src="@drawable/ic_content_copy_black_24dp" />

                </RelativeLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp4"
            android:focusable="true"
            android:foreground="?selectableItemBackground"
            app:cardCornerRadius="@dimen/dp4"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:id="@+id/llCallLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/dp10">

                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp5"
                    android:drawableStart="@drawable/ic_call_black_24dp"
                    android:drawablePadding="@dimen/dp10"
                    android:gravity="center_vertical"
                    android:text="@string/call_builder"
                    android:textColor="@android:color/black" />

            </LinearLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp4"
            android:focusable="true"
            android:foreground="?selectableItemBackground"
            app:cardCornerRadius="@dimen/dp4"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:id="@+id/llSendEmailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/dp10">

                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp5"
                    android:drawableStart="@drawable/ic_email_black_24dp"
                    android:drawablePadding="@dimen/dp10"
                    android:gravity="center_vertical"
                    android:text="@string/email_builder"
                    android:textColor="@android:color/black" />

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
